background-attachment:fixed nto working on mobile, testing workaround

--- a/css/home.scss
+++ b/css/home.scss
@@ -1,9 +1,9 @@
 .home {
-  height: 4000px;
+  height: 6000px;
   width: 100%;
   color: white;
   text-align: center;
-  
+
   .home1 {
     margin-top: 49vh;
     text-align: center;
